Remove Sub-Folders from the Filesystem